--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.2",
+    "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-session": "^1.10.2",
     "mysql": "^2.5.4",
