--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Aberrant-Marble/Aberrant-Marble",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.9.6",
     "body-parser": "^1.10.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
