--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-facebook": "^1.0.3",
     "sequelize": "^2.0.0-rc8",
     "sequelize-cli": "^1.0.6",
-    "socket.io": "~1.3.3"
+    "socket.io": "~1.3.3",
+    "node-uuid": "~1.4.2"
   },
   "devDependencies": {
     "browser-sync": "^2.0.0-rc4",
